--- a/theme/stylesheet_index.css
+++ b/theme/stylesheet_index.css
@@ -1190,8 +1190,11 @@ div.overboxctrl .overboxleft > .btn-group {
 .table-row .table-title h4,
 .table-row .table-title h4 a {
   width: auto;
-  overflow: hidden;
   text-overflow: ellipsis;
+
+  /* do not use overflow-hidden here. This will also cut some lower pixels of
+    letters like "g" or "y"! */
+  line-height: 20px;
 
   /* do not use inline-block here. Firefox will hide the whole title if the
     stats overlap with the title. however this fix does not affect the
@@ -1204,7 +1207,7 @@ div.overboxctrl .overboxleft > .btn-group {
   min-height: 18px;
   font-size: 18px;
   font-weight: normal;
-  line-height: 18px;
+  line-height: 20px;
 }
 
 .table-title a.table-titlenewpost img {
